src/negative_test_cases/Testcases/function_inside_function.stl
void main()
{

	int a;
	int b;
	int result;
	int sum()
	{

		result = a+b;
		return result;

	}

}
